--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es2020",
-		"lib": ["es2020"],
+		"lib": ["es2020", "dom"],
 		"outDir": "out",
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true
+		"strict": true,
 	},
 	"exclude": [
 		"node_modules",
