--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,16 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es2020",
-		"lib": ["es2020", "dom"],
+		"lib": [
+			"es2020",
+			"dom"
+		],
 		"outDir": "out",
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,
 	},
 	"exclude": [
-		"node_modules",
+		"node_modules"
 	]
 }
